<resources>
    <string name="app_name">Calculator</string>
    <string name="screen">2334111345</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Divide">/</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="clr">clr</string>
</resources>